edit product update price dialog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   carousel_slider: ^4.2.1
   adaptive_dialog: ^1.6.3
   responsive_table: ^0.2.0+2
+  syncfusion_flutter_datagrid: ^19.1.58
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
