--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.5
   carousel_slider: ^4.2.1
   adaptive_dialog: ^1.6.3
+  awesome_snackbar_content: ^0.1.0
 
   
 dev_dependencies:
