--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   carousel_slider: ^4.2.1
   adaptive_dialog: ^1.6.3
   awesome_snackbar_content: ^0.1.0
+  shared_preferences: ^2.0.17
 
   
 dev_dependencies:
